Fix .success overflow

--- a/client/templates/index/index.css.styl
+++ b/client/templates/index/index.css.styl
@@ -15,7 +15,7 @@ form
   input
     background none transparent
   .input-group-btn
-    z-index 100 
+    z-index 100
 
 .placeholder
   color #999999
@@ -32,3 +32,5 @@ form
 
 .success
   border 1px solid transparent
+  overflow hidden
+  white-space nowrap
